# terminal-widgets

./: CHANGELOG.md  README.md  flake.nix  terminal-widgets.cabal  treefmt.toml
.github/workflows/: ci.yml
app/: Main.hs  Prelude.hs
src/: Prelude.hs
src/Internal/: Prelude.hs
src/Prettyprinter/: Extra.hs
src/System/Terminal/: Modifier.hs  Render.hs  Widget.hs
src/System/Terminal/Widget/: Buttons.hs  Class.hs  Render.hs  SearchSelect.hs  Select.hs  TextInput.hs
src/System/Terminal/Widgets/: Buttons.hs  Common.hs  Render.hs  SearchSelect.hs  Select.hs  TextInput.hs
test/: Prelude.hs
test/System/Terminal/Widget/: ButtonsSpec.hs  SearchSelectSpec.hs  SelectSpec.hs  TextInputSpec.hs
test/System/Terminal/Widgets/: ButtonsSpec.hs  SearchSelectSpec.hs  SelectSpec.hs  TextInputSpec.hs
